--- a/static/wiki.css
+++ b/static/wiki.css
@@ -122,6 +122,9 @@ form.edit_page textarea, form.post_chat textarea {
     font-size: 110%;
     box-shadow: 0 0 0.3em #aaa inset;
 }
+form.edit_page div.journal_page_info {
+    margin-bottom: 0.5em;
+}
 form.post_chat textarea { height: 150px; }
 
 div.chat_new_post_area {
@@ -272,7 +275,7 @@ table.calendar div.day_wrapper_2 {
 }
 
 
-div.journal_date_selector {
+div.journal_navigation {
     float: right;
     width: 16em;
     padding: 0.25em 0.5em;
@@ -283,12 +286,22 @@ div.journal_date_selector {
 div.journal_new_entry_area {
     margin-bottom: 1em;
 }
-div.journal_timestamp {
-    font-size: 120%;
+div.post_journal_entry_controls_row {
+    margin: 0.2em 0;
 }
-div.journal_timestamp a {
-    border-bottom: 3px solid #ccc;
+div.journal_entry {
 }
+div.journal_entry .journal_timestamp {
+    font-weight: bold;
+    border-bottom: 2px solid #ddd;
+    width: auto;
+    float: left;
+    margin-bottom: 0.2em;
+}
+div.journal_entry div.journal_entry_content {
+    clear: left;
+}
+
 
 
 
