--- a/templates/view_journal.html
+++ b/templates/view_journal.html
@@ -7,52 +7,57 @@
     <span class="pagename">{{pagename}}</span>
   </div>
   <div class="page_content content_box" style="overflow: auto;">
-    <div class="journal_date_selector">
+    <div class="journal_navigation">
+      <div class="journal_user_selector">
+        <form id="journal_user_selector_form" method="get">
+          <div><strong>{{journal_user.username}}'s journal</strong></div>
+          <div>
+            <button type="submit">Switch to:</button>
+            <select name="user_id">
+              {% for user in all_users %}
+              <option>{{user.username}}</option>
+              {% endfor %}
+            </select>
+          </div>
+        </form>
+      </div>
       <ul>
         {% for summary_item in entry_summary %}
-        <li><a href="#">{{summary_item['month_name']}}&nbsp;{{summary_item['year']}}&nbsp;({{summary_item['pagenames']|length}})</a></li>
+        <li><a href="{{url_for('view_journal', year=summary_item['year'], month=summary_item['month_index'])}}">{{summary_item['month_name']}}&nbsp;{{summary_item['year']}}&nbsp;({{summary_item['pagenames']|length}})</a></li>
         {% endfor %}
       </ul>
     </div>
 
     <div class="journal_new_entry_area">
-      <button value="post" onclick="document.getElementById('new_entry_form').style.display='block'; document.getElementById('new_entry_button').style.display='none';" id="new_entry_button">Create a new entry</button>
+      <button value="post" onclick="document.getElementById('new_entry_form').style.display='block'; document.getElementById('new_entry_button').style.display='none';" id="new_entry_button">Post a new journal entry</button>
       <form id="new_entry_form" style="display: none;" method="post" accept-charset="utf-8" class="post_journal_entry">
-        <div class="post_journal_entry_header">
-          <label for="entry_timestamp">Date/Time</label>
-          <input type="text" name="entry_timestamp" value="{{current_timestamp_string}}"></input>
-        </div>
 	<textarea name="entry_content" rows="8" cols="80"></textarea>
         <div class="post_journal_entry_controls">
-	  <button type="submit" name="action" value="save" accesskey="s">Post</button>
-	  <button type="submit" name="action" value="cancel" accesskey="c" onclick="document.getElementById('new_entry_form').style.display='none'; document.getElementById('new_entry_button').style.display='block'; return false;">Cancel</button>
+          <div class="post_journal_entry_controls_row">
+            <button type="submit" name="action" value="save_with_system_time">Post using current server time</button>
+          </div>
+          <div class="post_journal_entry_controls_row">
+	    <button type="submit" name="action" value="save" accesskey="s">Post using custom timestamp:</button>
+            <input type="text" name="entry_timestamp" value="{{current_timestamp_string}}"></input>
+          </div>
+          <div class="post_journal_entry_controls_row">
+            <button type="submit" name="action" value="preview" accesskey="p">Preview post</button>
+          </div>
+          <div class="post_journal_entry_controls_row">
+	    <button type="submit" name="action" value="cancel" accesskey="c" onclick="document.getElementById('new_entry_form').style.display='none'; document.getElementById('new_entry_button').style.display='block'; return false;">Cancel post</button>
+          </div>
         </div>
       </form>
     </div>
 
     <div class="journal_entries_container">
     {% for page in journal_pages %}
-    <div class="journal_entry" id="journal_entry_{{loop.index0}}">
-      <div class="journal_entry_header">
-        <div class="journal_timestamp">
-          <a href="#" onclick="document.getElementById('edit_entry_form_{{loop.index0}}').style.display='block'; document.getElementById('journal_entry_{{loop.index0}}').style.display='none';">{{helper.formatted_time_from_journal_pagename(page.name)}}</a>
-        </div>
+    <div class="journal_entry">
+      <div class="journal_timestamp">
+        <a href="{{url_for('edit_page', pagename=page.name)}}">{{helper.formatted_time_from_journal_pagename(page.name)}}</a>
       </div>
-      <div class="journal_content">
-	{{page.content_as_markdown()|safe}}
-      </div>
+      <div class="journal_entry_content">{{page.content_as_markdown()|safe}}</div>
     </div>
-    <form id="edit_entry_form_{{loop.index0}}" style="display: none;" method="post" accept-charset="utf-8" class="post_journal_entry">
-      <div class="post_journal_entry_header">
-        <label for="entry_timestamp">Date/Time</label>
-        <input type="text" name="entry_timestamp" value="{{helper.formatted_time_from_journal_pagename(page.name)}}"></input>
-      </div>
-      <textarea name="entry_content" rows="8" cols="80">{{page.content}}</textarea>
-      <div class="post_journal_entry_controls">
-        <button type="submit" name="action" value="save">Save Changes</button>
-	<button name="action" value="cancel" onclick="document.getElementById('edit_entry_form_{{loop.index0}}').style.display='none'; document.getElementById('journal_entry_{{loop.index0}}').style.display='block'; return false;">Cancel</button>
-      </div>
-    </form>
     {% endfor %}
     </div>
   </div>
