--- a/templates/view_profile.html
+++ b/templates/view_profile.html
@@ -18,7 +18,7 @@
 	<tr>
 	  <td class="key">Your username:</td>
 	  <td class="value">
-	    <input type="text" size="20" name="username" value="{{current_user.username}}" />
+	    <strong>{{current_user.username}}</strong>
 	  </td>
 	</tr>
 	<tr>
