--- a/static/wiki.css
+++ b/static/wiki.css
@@ -283,6 +283,8 @@ div.journal_navigation {
     border: 2px solid #ddd;
     background-color: #eee;
 }
+div.journal_navigation div.current_journal_user { margin-bottom: 0.25em; }
+div.journal_navigation a.selected { font-weight: bold; }
 div.journal_new_entry_area {
     margin-bottom: 1em;
 }
