--- a/templates/view_calendar.html
+++ b/templates/view_calendar.html
@@ -22,7 +22,8 @@
     <td class="day outsidemonth"></td>
     {% else %}
     <td
-      class="day insidemonth{{' current_day' if today.day == day and today.month == calendar.month else ''}}"
+      {% set is_current_day = today.day == day and today.month == calendar.month and today.year == calendar.year %}
+      class="day insidemonth{{' current_day' if is_current_day else ''}}"
       onclick="location.href='{{url_for('edit_page', pagename=calendar.pagename_for_day(day))}}'"
       >
       <div class="day_wrapper_1"><div class="day_wrapper_2">
