--- a/templates/view_journal.html
+++ b/templates/view_journal.html
@@ -61,7 +61,7 @@
     {% for page in journal_pages %}
     <div class="journal_entry">
       <div class="journal_timestamp">
-        <a href="{{url_for('edit_page', pagename=page.name)}}">{{helper.formatted_time_from_journal_pagename(page.name)}}</a>
+        <a href="{{url_for('edit_page', pagename=page.name)}}">{{helper.formatted_time_from_journal_pagename(page.name, True)}}</a>
       </div>
       <div class="journal_entry_content">{{page.content_as_markdown()|safe}}</div>
     </div>
