--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,7 +30,7 @@
 	  {% endif %}
 	</div>
 	<div class="toolbar">
-	  <form action="{{url_for('fulltext_search')}}" method="get" accept-charset="utf-8">
+	  <form action="{{url_for('fulltext_search')}}" method="get" accept-charset="utf-8" class="search_form">
 	    <input type="text" placeholder="Search" name="query" />
 	    <button type="submit" title="Search">Search</button>
 	  </form>
