implementing more of email notifications feature

--- a/templates/view_profile.html
+++ b/templates/view_profile.html
@@ -71,8 +71,8 @@
 	    <input type="text" name="email_throttle_minutes" size="2" value="{{profile.get('email_throttle_minutes', 0)}}" />
 	    minutes
 	    <p>
+	      <a href="#" onclick="return false;">Disarm throttling [3 mins left]</a> -
 	      <a href="#" onclick="document.getElementById('smtp_settings').style.display='table-row';return false;">Edit SMTP settings</a> -
-	      <a href="#" onclick="return false;">Disarm throttling</a> -
 	      <a href="#" onclick="return false;">Send test email</a>
 	    </p>
 	  </td>
