--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,6 +12,9 @@
     {% if is_main_chat_view %}
     <script type="text/javascript" charset="utf-8" src="{{url_for('static', filename='chat.js')}}"></script>
     {% endif %}
+    {% if is_main_check_in_view %}
+    <script type="text/javascript" charset="utf-8" src="{{url_for('static', filename='check_in.js')}}"></script>
+    {% endif %}
   </head>
 
   <body>
@@ -38,6 +41,7 @@
 	<div class="toolbar">
 	  <a accesskey="p" href="{{url_for('view_page', pagename='start')}}"{{(' class="current"' if toolbar_selection == 'start' else '')|safe}}>Start</a> -
 	  <a accesskey="t" href="{{url_for('view_page', pagename='chat')}}"{{(' class="current"' if toolbar_selection == 'chat' else '')|safe}}>Chat</a> -
+	  <a accesskey="k" href="{{url_for('view_check_in')}}"{{(' class="current"' if toolbar_selection == 'check_in' else '')|safe}}>Check In</a> -
 	  <a accesskey="c" href="{{url_for('todays_calendar')}}"{{(' class="current"' if toolbar_selection == 'calendar' else '')|safe}}>Calendar</a> -
           <a accesskey="j" href="{{url_for('view_current_user_journal')}}"{{(' class="current"' if toolbar_selection == 'journal' else '')|safe}}>Journal</a> -
 	  <a accesskey="f" href="{{url_for('view_directory', path='')}}"{{(' class="current"' if toolbar_selection == 'files' else '')|safe}}>Files</a> -
